fixed: page alignment

--- a/styled.css
+++ b/styled.css
@@ -23,17 +23,19 @@ body {
   height: 36px;
 }
 .subtitulos {
-  height: 50px;
-  margin-left: 156px;
-  margin-right: 193px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 19px;
-  line-height: 24px;
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: space-between;
+
+  height: 50px;
+  margin-left: 156px;
+  margin-right: 193px;
+  
+  font-style: normal;
+  font-weight: 700;
+  font-size: 19px;
+  line-height: 24px;
   letter-spacing: -0.02em;
 }
 .caixa-topo {
@@ -134,6 +136,8 @@ body {
 }
 .pagina {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   margin-bottom: 50px;
 }
